--- a/README.Rmd
+++ b/README.Rmd
@@ -6,11 +6,11 @@ output: github_document
 The DNV is an interactive R Shiny web application for visualising and analysing patterns in illicit drug markets to provide insights in line with an intelligence-led policing approach. The app has a dashboard layout with sections for viewing and optimising data, building network graphs and conducting regarding relational, temporal, spatial and other quantitative analyses.
 
 ## Table of contents
-* [Shinyapps.io hosting](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Shinyapps.io-hosting)
+* [Shinyapps.io hosting](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Shinyappsio-hosting)
 * [Scope](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Scope)
 * [Usage](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Usage)
   * [Data](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Data)
-  * [Networks](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Analysis)
+  * [Networks](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Networks)
   * [Analysis](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Networks)
 * [Future direction](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Future)
 * [Author](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Author)
