--- a/README.Rmd
+++ b/README.Rmd
@@ -11,8 +11,8 @@ The DNV is an interactive R Shiny web application for visualising and analysing 
 * [Usage](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Usage)
   * [Data](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Data)
   * [Networks](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Networks)
-  * [Analysis](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Networks)
-* [Future direction](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Future)
+  * [Analysis](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Analysis)
+* [Future direction](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Future-direction)
 * [Author](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Author)
 * [Acknowledgements](https://github.com/PopovicAna/Dynamic-Network-Visualisation#Acknowledgements)
 
